Add Controllers e Model (Regiao, Bairro,Relatorio)
